package com.github.yamikazoo.pokepad.models;

import jakarta.persistence.Entity;
import jakarta.persistence.Table;
import jakarta.persistence.Id;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Column;
import jakarta.persistence.OneToMany;
import java.util.List;
import lombok.Data;
import lombok.ToString;

@Entity
@Data
@Table(name = "users")
public class User {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(unique = true)
    private String username;

    private String password;

    // foreign key relationship to collections of this user
    @ToString.Exclude // avoid stack overflow from circular referencing of users and collections
    @OneToMany(mappedBy = "user")
    private List<Collection> collections;
}
